addressing more comments