@@ -25,16 +25,27 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 /**
- * Asserts that {@link RealVectorPrimitives} resolves to the backend that the current task's JVM
- * setup implies. Each test is routed by a JUnit tag to the gradle task whose backend it needs:
+ * Tests for {@link RealVectorPrimitives} backend selection, in two flavors.
+ * <p>
+ * <b>Active-backend assertions</b> check that the statically resolved {@link RealVectorPrimitives#backend()}
+ * matches what the current task's JVM setup implies. Each is routed by a JUnit tag to the gradle
+ * task whose backend it needs:
  * <ul>
  *   <li>{@link Tags#RequiresSIMD}: runs in the default {@code test} task, which passes
  *       {@code --add-modules jdk.incubator.vector} so the SIMD backend loads.</li>
  *   <li>{@link Tags#RequiresScalar}: runs in {@code scalarFallbackTest}, which sets
  *       {@code fdb.vector.simd=scalar} and omits {@code --add-modules}.</li>
  * </ul>
+ * <p>
+ * <b>Selection-logic tests</b> drive {@link RealVectorPrimitives#selectBackend(String,
+ * RealVectorPrimitives.SimdBackendLoader)} directly with a stub loader, so every branch (auto,
+ * scalar, strict simd; loader success/failure) is covered deterministically in the default JVM
+ * regardless of module availability. Two {@link Tags#RequiresScalar}-tagged variants additionally
+ * use the <em>real</em> reflective loader in the no-{@code --add-modules} fork to verify the
+ * genuine module-absent behavior.
  */
 class BackendSelectionTest {
 
@@ -55,5 +66,69 @@ class BackendSelectionTest {
         assertThat(backendName)
                 .as("backend name when fdb.vector.simd=scalar is set")
                 .isEqualTo("scalar");
+    }
+
+    // ---- selection-logic unit tests (stub loader; run in any JVM) ----
+
+    @Test
+    void autoModeUsesSimdBackendWhenLoaderSucceeds() {
+        final Backend stub = new ScalarBackend(); // sentinel; any Backend instance works here
+        assertThat(RealVectorPrimitives.selectBackend("auto", () -> stub)).isSameAs(stub);
+    }
+
+    @Test
+    void autoModeFallsBackToScalarWhenLoaderFails() {
+        // Default 'auto' mode with the SIMD backend unloadable (e.g. no --add-modules) must
+        // silently fall back to scalar — the configuration an adopter gets without opting in.
+        final Backend backend = RealVectorPrimitives.selectBackend("auto",
+                () -> {
+                    throw new NoClassDefFoundError("jdk.incubator.vector not present");
+                });
+        assertThat(backend).isInstanceOf(ScalarBackend.class);
+    }
+
+    @Test
+    void scalarModeUsesScalarWithoutConsultingLoader() {
+        final Backend backend = RealVectorPrimitives.selectBackend("scalar",
+                () -> {
+                    throw new AssertionError("loader must not be consulted in scalar mode");
+                });
+        assertThat(backend).isInstanceOf(ScalarBackend.class);
+    }
+
+    @Test
+    void simdModeUsesSimdBackendWhenLoaderSucceeds() {
+        final Backend stub = new ScalarBackend();
+        assertThat(RealVectorPrimitives.selectBackend("simd", () -> stub)).isSameAs(stub);
+    }
+
+    @Test
+    void simdModeThrowsWhenLoaderFails() {
+        // Strict opt-in: -Dfdb.vector.simd=simd must fail loudly rather than silently degrade.
+        assertThatThrownBy(() -> RealVectorPrimitives.selectBackend("simd",
+                () -> {
+                    throw new NoClassDefFoundError("jdk.incubator.vector not present");
+                }))
+                .isInstanceOf(IllegalStateException.class);
+    }
+
+    // ---- module-absent integration tests (real reflective loader; scalarFallbackTest fork only) ----
+
+    @Test
+    @Tag(Tags.RequiresScalar)
+    void autoModeFallsBackToScalarWithRealLoaderWhenModuleAbsent() {
+        // In the scalarFallbackTest fork (no --add-modules) the real reflective load genuinely
+        // fails, so 'auto' must fall back to scalar — the real module-absent adopter default.
+        final Backend backend =
+                RealVectorPrimitives.selectBackend("auto", RealVectorPrimitives::loadSimdBackend);
+        assertThat(backend).isInstanceOf(ScalarBackend.class);
+    }
+
+    @Test
+    @Tag(Tags.RequiresScalar)
+    void simdModeThrowsWithRealLoaderWhenModuleAbsent() {
+        assertThatThrownBy(() ->
+                RealVectorPrimitives.selectBackend("simd", RealVectorPrimitives::loadSimdBackend))
+                .isInstanceOf(IllegalStateException.class);
     }
 }
